--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,12 @@
 # To install the dependencies run in your shell the following command:
 # pip install -U -r requirements.txt
 #
-numpy==1.14.0
-numba==0.37.0
-opencv-python==3.3.0.10
-scipy==1.1.0
-scikit-learn==0.19.1
-scikit-image==0.13.1
-Pillow==5.0.0
+matplotlib==3.7.1
+numba==0.56.4
+numpy==1.23.5
+opencv-python==4.7.0.72
+Pillow==9.5.0
+scikit-image==0.20.0
+scikit-learn==1.2.2
+scipy==1.10.1
 
