--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,11 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+Qfactor_str2
+filter2
+Qfactor_coh2
+results/img_001_SRF_2_HR_result.bmp
+results/img_002_SRF_2_HR_result.bmp
+results/img_003_SRF_2_HR_result.bmp
+results/img_004_SRF_2_HR_result.bmp
+results/img_005_SRF_2_HR_result.bmp
