--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ matplotlib==3.7.1
 numba==0.56.4
 numpy==1.23.5
 opencv-python==4.7.0.72
+pydicom==2.3.1
 Pillow==9.5.0
 scikit-image==0.20.0
 scikit-learn==1.2.2
